--- a/view/user/authentication/login.phtml
+++ b/view/user/authentication/login.phtml
@@ -1,5 +1,42 @@
-<form method="POST">
-    <input type="submit" value="login" style="margin-top: 30px;">
-</form>
-<br>
+<div class="texture">
+    <div class="middle-login login-container">
+        <div class="block-flat">
+            <div class="header">
+                <h3 class="text-center">
+                    EArzeh Company Management System
+                </h3>
+            </div>
+            <div>
+                <form method="post" style="margin-bottom: 0px !important;" class="form-horizontal" >
+                    <div class="content">
+                        <h4 class="title">Login Access</h4>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                                    <input type="text" placeholder="Username" id="username" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                                    <input type="password" placeholder="Password" id="password" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="foot">
+                        <button class="btn btn-default" data-dismiss="modal" type="button">Register</button>
+                        <button class="btn btn-primary" data-dismiss="modal" type="submit">Log me in</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="text-center out-links"><a href="#">&copy; 2015 EArzeh Company</a></div>
+    </div>
+
+</div>
 <?=$this->result?>
