--- a/view/user/authentication/login.phtml
+++ b/view/user/authentication/login.phtml
@@ -14,7 +14,7 @@
                             <div class="col-sm-12">
                                 <div class="input-group">
                                     <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                    <input type="text" placeholder="Username" id="username" class="form-control">
+                                    <input type="text" placeholder="Username" name="username" class="form-control">
                                 </div>
                             </div>
                         </div>
@@ -22,7 +22,7 @@
                             <div class="col-sm-12">
                                 <div class="input-group">
                                     <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                    <input type="password" placeholder="Password" id="password" class="form-control">
+                                    <input type="password" placeholder="Password" name="password" class="form-control">
                                 </div>
                             </div>
                         </div>
